--- a/.gitignore
+++ b/.gitignore
@@ -23,19 +23,8 @@ workflow/scripts/PrettyPlots.py
 workflow/scripts/Peptidome_comparison.py
 workflow/scripts/belief_propagation_log.py
 workflow/scripts/__pycache__/*
-
 workflow/Sars_strains.snakefile
-
-
 .snakemake/
 .vscode/
-
 ./config/*
-.idea/deployment.xml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/PepGM.iml
-.idea/snakemake-settings.xml
-.idea/vcs.xml
+.idea/*
