--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,16 +25,16 @@ AddHostandCrapToDB: True
 #xtandem parameters
 search_engine : "xtandem"
 xtandem_mods_variable : "16@M"
-xtandem_pmmep : 10
-xtandem_pmmem : 10
+xtandem_pmmep : 5
+xtandem_pmmem : 5
 xtandem_default: "/home/tholstei/repos/PepGM_all/PepGM/resources/XTandem/xtandem_default.xml" # X!Tandem default configuration file
-xtandem_fmme: 0.4 #Fragment mass tolerance (default=0.4)
+xtandem_fmme: 0.5 #Fragment mass tolerance (default=0.4)
 xtandem_fmmeu: 'DA' #Fragment mass tolerance unit (default="DA")
-xtandem_pmmep: 100 #Precursor mass tolerance plus (default=100)
-xtandem_pmmem: 100 # Precursor mass tolerance minus (default=100)
+xtandem_pmmep: 5 #Precursor mass tolerance plus (default=100)
+xtandem_pmmem: 5 # Precursor mass tolerance minus (default=100)
 xtandem_pmmeu: 'ppm' #Precursor mass tolerance unit (default="ppm")
-xtandem_mods_fixed: '57@C' #Fixed modifications, comma separated (default="57@C")
-xtandem_mods_variable: '' # Variable modifications, e.g. "16@M", comma separated (default=None)
+xtandem_mods_fixed: '57@C,15.99@M' #Fixed modifications, comma separated (default="57@C")
+xtandem_mods_variable: '0.984@N,0.984@Q' # Variable modifications, e.g. "16@M", comma separated (default=None)
 xtandem_mods_variable_nterm: '' #Variable N-terminal modifications, e.g."+42.0@[", comma separated (default=None)
 xtandem_add_params: {} #Additional parameters for X!Tandem as json dictionary{"param1" : "value", "param2" : "value", ...} which will be added to thextandem_input.xml
 
@@ -44,14 +44,19 @@ RescoreFeatures: '[["searchengine", "ms2pip", "rt"]]' #[["searchengine", "ms2pip
 RunPercolator: 'true' #boolean
 FragModel: '"HCD"' #fragmentation model used for ms2pip http://compomics.github.io/projects/ms2pip_c#specialized-prediction-models
 Mods: 
-      [["Acetyl", 1, 42.010565,'null','true','false'],
-       ["Deamidated", 7, 0.984016, '"Q"', 'false', 'false'],
+      [["Deamidated", 7, 0.984016, '"Q"', 'false', 'false'],
+       ["Deamidated", 7, 0.984016, '"N"', 'false', 'false'],
+       ["Carbamidomethyl", 4,57.021464,'"C"', 'false', 'false'],
+       ["Oxidated", 35, 15.9949146, '"M"','true','false'],
+       ["Acetyl", 1, 42.010565,'null','true','false'],
        ["Gln->pyro-Glu",28,-17.026549, '"Q"', 'true', 'false'],
        ["Glu->pyro-Glu", 27, -18.010565, '"E"', 'true',  'false'],
-       ["Carbamidomethyl", 4,57.021464,'"C"', 'false', 'false'],
-       ["Gln->pyro-Glu", 28, -17.026549, '"Q"','true','false'],
        ["Ammonia-loss", 385, -17.026549, '"C"', 'true','false']] #needs to be a lists of lists with name, unimod accession, mass shift, amino acid, n term (bool), c term (bool)
 
+#UnipeptQueryParameters
+TaxaNumber: 30
+targetTaxa: 10239   #comma separated taxa to be included in Unipept query 
+MinPepScore: 0.01
 
 #sample specific parameters
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
@@ -59,6 +64,18 @@ SampleName: 'PXD018594_Sars_CoV_2'  #needs to be the name of your spectrum file 
 ReferenceDBName: 'refseqViral'
 HostName: 'chlorocebus'
 ScientificHostName: 'chlorocebus'
+
+
+#PepGM parameters
+TaxaInPlot: 15       #how many taxa should appear in the final results barplot
+TaxaInProteinCount: 15 #how many taxa should appear in the protein counting barplot
+sourceDB: 'all[FILT]' #choose from entrez query DBs to filter the protein DB with 
+#swissprot[filter]' = only swissprot proteins, refseq[filter] = know refseq proteins, all[filter]', etc: https://www.ncbi.nlm.nih.gov/books/NBK49540/
+
+Alpha: [0.01,0.05,0.1,0.2,0.4,0.6] #increments of parameter alpha to use for the grid earch
+Beta: [0.01,0.05,0.1,0.2,0.4,0.5,0.7] #range of parameter beta to use for the grid search
+prior: [0.1,0.3,0.5]
+
 
 
 #PepGM parameters
