Add public config file

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,22 +1,22 @@
-APImail: 'ytanja.holstein@bam.de'
-APIkey: 'cbd119d8a7d988bc27f5b0a722a7c861f408'
-ExperimentName: 'psl'
-SampleName: 'cowpox'
-HostName: 'human'
-ReferenceDBName: 'minRefSeqViral'
-ScientificHostName: "'homo sapiens'" 
+APImail: ''
+APIkey: ''
+ExperimentName: ''
+SampleName: ''
+HostName: ''
+ReferenceDBName: ''
+ScientificHostName: ''
 FilterSpectra: False
 AddHostandCrapToDB: True
-SamplePath: '/home/fkistner/pepgm/resources/SampleData/spectrafile_PXD014913_cowpox_minimal_example.mgf'
-ParametersFile: '/home/fkistner/pepgm/resources/SampleData/parfile_searchgui_PXD014913_cowpox_minimal_example.par'
+SamplePath: ''
+ParametersFile: ''
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Database/'
-PeptideShaker: '/home/fkistner/pepgm/bin/PeptideShaker-2.2.16/PeptideShaker-2.2.16.jar'
-SearchGUI: '/home/fkistner/pepgm/bin/SearchGUI-4.1.23/SearchGUI-4.1.23.jar'
+PeptideShaker: ''
+SearchGUI: ''
 ResourcesDir: 'resources/'
 ResultsDir: 'results/'
 TaxidMapping: 'taxidMapping/'
-searchengines: '-xtandem'
+searchengines:
 psmFDR: '5.0'
 peptideFDR: '5.0'
 proteinFDR: '5.0'
