--- a/workflow/rules/envs/decoy.yml
+++ b/workflow/rules/envs/decoy.yml
@@ -24,6 +24,7 @@ dependencies:
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
+  - pip==22.2.2
   - pip:
     - certifi==2022.9.24
     - pip==22.2.2
