--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -115,34 +115,34 @@ rule CountProteinsInJson:
 #        expand(ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/' + ReferenceDBName + '_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',alpha=AlphaRange,beta=BetaRange,Prior=prior,N=[1,10,100,200,400,500,600]),
 #        ResultsDir + SampleName + '/NArtPeps{N}/paramcheck.png',
 
-rule RunPepGMWithArtificialPeptides:
-    input: PepGMtoUse(ProteinGM)
-    output: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
-    conda: 'envs/graphenv.yml'
-    params:
-        samplename=SampleName,
-        hostname=HostName,
-        DBname=ReferenceDBName,
-    log: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}_pepGM.log'
-    shell: 'python3  workflow/scripts/Paper_scripts/AddArtificialPeptides.py ----artificial_pep_number {wildcards.N} --GraphMLPath {input} --prior {wildcards.Prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output} &>> {log}'
-
-rule BarPlotResultsArtificialPeptides:
-    input: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
-    output: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',
-    conda: 'envs/graphenv.yml'
-    params: NumberofResults=TaxaInPlot
-    log: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}.log'
-    shell: 'python3 workflow/scripts/BarPlotResults.py --ResultsFile {input} --NumberofResults {params.NumberofResults} --out {output} &>> {log}'
-
-
-rule FindBestParametersArtificialPeptides:
-    input: ResultsDir + SampleName + '/' + ReferenceDBName + '_mapped_taxids_weights.csv',
-        expand(ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/' + ReferenceDBName + '_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',alpha=AlphaRange,beta=BetaRange,Prior=prior)
-    output: ResultsDir + SampleName + '/NArtPeps{N}/paramcheck.png',
-            ResultsDir + SampleName + '/NArtPeps{N}/PhyloTreeView.png'
-    conda: 'envs/graphenv.yml'
-    log: ResultsDir + SampleName + '/NArtPeps{N}/paramcheck.log'
-    params: Results=ResultsDir + SampleName,
-        host=ScientificHostName,
-        DB=ReferenceDBName
-    shell: 'python3 workflow/scripts/SearchAnalysisOutputFormatter.py --weights {input[0]} --refdb {params.DB} --host {params.host} --results {params.Results} --out {output[0]} &>> {log}'
+# rule RunPepGMWithArtificialPeptides:
+#     input: PepGMtoUse(ProteinGM)
+#     output: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
+#     conda: 'envs/graphenv.yml'
+#     params:
+#         samplename=SampleName,
+#         hostname=HostName,
+#         DBname=ReferenceDBName,
+#     log: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}_pepGM.log'
+#     shell: 'python3  workflow/scripts/Paper_scripts/AddArtificialPeptides.py ----artificial_pep_number {wildcards.N} --GraphMLPath {input} --prior {wildcards.Prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output} &>> {log}'
+#
+# rule BarPlotResultsArtificialPeptides:
+#     input: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
+#     output: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',
+#     conda: 'envs/graphenv.yml'
+#     params: NumberofResults=TaxaInPlot
+#     log: ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}.log'
+#     shell: 'python3 workflow/scripts/BarPlotResults.py --ResultsFile {input} --NumberofResults {params.NumberofResults} --out {output} &>> {log}'
+#
+#
+# rule FindBestParametersArtificialPeptides:
+#     input: ResultsDir + SampleName + '/' + ReferenceDBName + '_mapped_taxids_weights.csv',
+#         expand(ResultsDir + SampleName + '/NArtPeps{N}/Prior{Prior}/' + ReferenceDBName + '_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',alpha=AlphaRange,beta=BetaRange,Prior=prior)
+#     output: ResultsDir + SampleName + '/NArtPeps{N}/paramcheck.png',
+#             ResultsDir + SampleName + '/NArtPeps{N}/PhyloTreeView.png'
+#     conda: 'envs/graphenv.yml'
+#     log: ResultsDir + SampleName + '/NArtPeps{N}/paramcheck.log'
+#     params: Results=ResultsDir + SampleName,
+#         host=ScientificHostName,
+#         DB=ReferenceDBName
+#     shell: 'python3 workflow/scripts/SearchAnalysisOutputFormatter.py --weights {input[0]} --refdb {params.DB} --host {params.host} --results {params.Results} --out {output[0]} &>> {log}'
