--- a/workflow/envs/graphenv.yml
+++ b/workflow/envs/graphenv.yml
@@ -1,3 +1,4 @@
+# TODO: Remove package hashes
 name: graphenv
 channels:
   - bioconda
@@ -98,70 +99,70 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
-    - absl-py==1.1.0
-    - argparse==1.4.0
-    - astunparse==1.6.3
-    - attrs==21.4.0
-    - cachetools==5.2.0
-    - cascade-config==0.3.0
-    - click==7.1.2
-    - deeplc==1.1.2
-    - flatbuffers==1.12
-    - future==0.18.2
-    - gast==0.4.0
-    - google-auth==2.8.0
-    - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - greenlet==1.1.2
-    - grpcio==1.46.3
-    - h5py==3.7.0
-    - importlib-metadata==4.11.4
-    - joblib==1.1.0
-    - jsonschema==3.2.0
-    - keras==2.9.0
-    - keras-preprocessing==1.1.2
-    - libclang==14.0.1
-    - llvmlite==0.38.1
-    - markdown==3.3.7
-    - ms2pip==3.9.0
-    - ms2rescore==2.1.2
-    - numba==0.55.2
-    - numexpr==2.8.1
-    - numpy==1.22.4
-    - oauthlib==3.2.0
-    - opt-einsum==3.3.0
-    - packaging==21.3
-    - patsy==0.5.2
-    - peewee==3.14.4
-    - progressbar2==4.0.0
-    - protobuf==3.19.4
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pygam==0.8.0
-    - pyrsistent==0.18.1
-    - pyteomics==4.5.3
-    - python-utils==3.3.3
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - scikit-learn==1.1.1
-    - spectrum-utils==0.3.5
-    - sqlalchemy==1.4.37
-    - statsmodels==0.13.2
-    - tables==3.7.0
-    - taxadb==0.12.0
-    - tensorboard==2.9.1
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - tensorflow==2.9.1
-    - tensorflow-estimator==2.9.0
-    - tensorflow-io-gcs-filesystem==0.26.0
-    - termcolor==1.1.0
-    - threadpoolctl==3.1.0
-    - tomlkit==0.11.0
-    - tqdm==4.62.3
-    - typing-extensions==4.2.0
-    - werkzeug==2.1.2
-    - wrapt==1.14.1
-    - xgboost==1.6.1
-    - zipp==3.8.0
+      - absl-py==1.1.0
+      - argparse==1.4.0
+      - astunparse==1.6.3
+      - attrs==21.4.0
+      - cachetools==5.2.0
+      - cascade-config==0.3.0
+      - click==7.1.2
+      - deeplc==1.1.2
+      - flatbuffers==1.12
+      - future==0.18.2
+      - gast==0.4.0
+      - google-auth==2.8.0
+      - google-auth-oauthlib==0.4.6
+      - google-pasta==0.2.0
+      - greenlet==1.1.2
+      - grpcio==1.46.3
+      - h5py==3.7.0
+      - importlib-metadata==4.11.4
+      - joblib==1.1.0
+      - jsonschema==3.2.0
+      - keras==2.9.0
+      - keras-preprocessing==1.1.2
+      - libclang==14.0.1
+      - llvmlite==0.38.1
+      - markdown==3.3.7
+      - ms2pip==3.9.0
+      - ms2rescore==2.1.2
+      - numba==0.55.2
+      - numexpr==2.8.1
+      - numpy==1.22.4
+      - oauthlib==3.2.0
+      - opt-einsum==3.3.0
+      - packaging==21.3
+      - patsy==0.5.2
+      - peewee==3.14.4
+      - progressbar2==4.0.0
+      - protobuf==3.19.4
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pygam==0.8.0
+      - pyrsistent==0.18.1
+      - pyteomics==4.5.3
+      - python-utils==3.3.3
+      - requests-oauthlib==1.3.1
+      - rsa==4.8
+      - scikit-learn==1.1.1
+      - spectrum-utils==0.3.5
+      - sqlalchemy==1.4.37
+      - statsmodels==0.13.2
+      - tables==3.7.0
+      - taxadb==0.12.0
+      - tensorboard==2.9.1
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - tensorflow==2.9.1
+      - tensorflow-estimator==2.9.0
+      - tensorflow-io-gcs-filesystem==0.26.0
+      - termcolor==1.1.0
+      - threadpoolctl==3.1.0
+      - tomlkit==0.11.0
+      - tqdm==4.62.3
+      - typing-extensions==4.2.0
+      - werkzeug==2.1.2
+      - wrapt==1.14.1
+      - xgboost==1.6.1
+      - zipp==3.8.0
 prefix: /home/tholstei/.conda/envs/graphenv
